# kascode

./: .gitignore  Makefile  README.md  generate_sprites.sh  hatch_build.py  install.sh  prime.py  pyproject.toml  starfield.py  starfield_v2.py  uninstall.sh
.github/workflows/: ci.yml  llama-cpp.yml
agent/: __main__.py  cli.py  config.py  main.py  tui.py
agent/adapters/audio/: _transcribe_worker.py  record.py  stt.py  transcriber.py  tts.py
agent/adapters/retrieval/: bm25.py
agent/adapters/storage/: filesystem.py
agent/adapters/tools/: _bash_tools.py  _file_tools.py  _image_tools.py  bash.py  executor.py  files.py  image.py  recall.py  web.py
agent/adapters/ui/: console.py
agent/adapters/workspace/: git.py
agent/core/: ai_wellbeing.py  compaction.py  loop.py  prompts.py  self_skill.py  subagent.py  toolspec.py  transcript.py
agent/ports/: storage.py  tools.py  ui.py  workspace.py
agent/tui/: app.py  commands.py  image_preview.py  io.py  loops.py  stats.py  viz.py  widgets.py
agent/tui/commands/: __init__.py  _install.py  ai_wellbeing.py  art.py  base.py  compact.py  converse.py  ctx.py  fx.py  help.py  image.py  kv.py  listen.py  model.py  pause.py  rag.py  sandbox.py  say.py  self_skill.py  show.py  spec.py  stats.py  status.py  stop.py  subagent.py  theme.py  viz.py  yolo.py
agent/tui/fx/: __init__.py  bar.py  effects.py
docs/architecture/: REFACTOR-hexagonal.md
docs/enhancements/: feat.md  skills.md
docs/reports/: functionality-assessment.md
docs/v3/: PLAN.md
mytestreactapp/: package-lock.json  package.json
mytestreactapp/src/components/: CategoryChart.jsx  UserGrowthChart.jsx
scripts/: bench_models.py  doctor.py  install_deps.py  models.py  perf_report.py  select_model.py  smoke_voice.py  version.py
server/: app.py  cli.py  config.py  engine.py  prompting.py  schema.py
server/adapters/http/: complete.py  sse.py
server/backends/: __init__.py  _gpu.py  llama_cpp.py  mlx.py  mlx_vlm.py
server/core/: cache.py  continuation.py  kvpersist.py  pipeline.py  ports.py
server/prompting/: __init__.py  dialects.py  gemma_args.py  parser.py  recover.py  standard_dialects.py  translate.py  wire.py
tests/: test_ai_wellbeing.py  test_api.py  test_architecture.py  test_audio.py  test_backends.py  test_body_scroll.py  test_cache.py  test_commands.py  test_compaction.py  test_composer.py  test_continuation.py  test_converse.py  test_dialects.py  test_doctor.py  test_fx.py  test_image_preview.py  test_io.py  test_kvpersist.py  test_llama_cpp_live.py  test_loop.py  test_model_kind.py  test_models_cli.py  test_parser.py  test_paste_spill.py  test_ports.py  test_recover.py  test_replay.py  test_tab_complete.py  test_thread_isolation.py  test_tools.py  test_tui_smoke.py  test_version.py  test_viz.py  test_viz_render.py
ttm-game/: GAME_SPEC.md  package-lock.json  package.json
ttm-game/src/: App.jsx  index.css
ttm-game/src/game/: constants.js  saveLoad.js  simulation.js  state.js  terrain.js
ttm-game/src/rendering/: renderer.jsx
ttm-game/src/ui/: InfoPanel.jsx  NewGameModal.jsx  SaveLoadPanel.jsx  VehiclePanel.jsx
