[project]
name = "kas"
version = "0.1.0"
description = "Anthropic Messages API-compatible server backed by a local MLX model, plus an agentic loop client"
requires-python = ">=3.11"
dependencies = [
    "mlx-lm>=0.24",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "anthropic>=0.109",
    "huggingface-hub",
    "textual>=8.2.7",
    "psutil>=5.9",        # cpu/ram/disk/net for the /stats panel (core)
]

# Opt-in tool backends. Each tool degrades gracefully when its package is
# absent (the tool returns an install hint), so these stay out of the core
# install:  uv add ddgs trafilatura   (or)   pip install 'kas[web]'
[project.optional-dependencies]
web = ["ddgs>=8.0", "trafilatura>=2.0.0"]   # web_search / web_fetch  (--net)
art = ["mflux>=0.9"]                          # generate_image (FLUX on MLX) (--art)
all = ["kas[web,art]"]

[project.scripts]
kas = "agent.cli:main"
kas-server = "server.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "server", "scripts"]
