[project]
name = "kas"
version = "0.1.0"
description = "Anthropic Messages API-compatible server backed by a pluggable local model backend (MLX on Apple Silicon today), plus a cross-platform agentic loop client"
requires-python = ">=3.11"
# Cross-platform core: the agent (client) and the server framework run anywhere.
# The MLX inference backend is Apple-Silicon-only (Metal/Accelerate), so mlx-lm
# carries a platform marker — `pip/uv install kas` pulls it ONLY on macOS/arm64
# and skips it on Linux/Windows/x86 (no Apple packages there). Other backends
# (llama.cpp/CUDA/ROCm) get their own marked deps as they land.
dependencies = [
    "mlx-lm>=0.24; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "anthropic>=0.109",
    "huggingface-hub",
    "textual>=8.2.7",
    "psutil>=5.9",        # cpu/ram/disk/net for the /stats panel (core)
]
# NOTE: voice (mlx-whisper), vision (mlx-vlm), etc. are OPTIONAL extras below —
# NOT core deps. They pull heavy stacks (numba/scipy/tiktoken) that perturb the
# clean env the platform-detection tests assume, and most installs don't want
# them. Persistence for a uv-tool install is handled by install.sh bundling the
# wanted ones with `--with` (KAS_WITH=…), so they survive `make install`.

# Opt-in tool backends. Each tool degrades gracefully when its package is
# absent (the tool returns an install hint), so these stay out of the core
# install:  uv add ddgs trafilatura   (or)   pip install 'kas[web]'
[project.optional-dependencies]
web = ["ddgs>=8.0", "trafilatura>=2.0.0"]   # web_search / web_fetch  (--net)
# generate_image (FLUX on MLX) — also Apple-Silicon only, hence the same marker.
art = ["mflux>=0.9; sys_platform == 'darwin' and platform_machine == 'arm64'"]
# Semantic recall (/memory): the sqlite-vec vector store + a portable CPU embedder
# (model2vec — numpy, no torch, all platforms). GPU embedders are separate,
# platform-gated extras so the wrong runtime is never pulled in; the embedder
# registry degrades gracefully when none are installed (BM25 + KG still work).
memory = ["sqlite-vec>=0.1", "model2vec>=0.3"]
memory-mlx = ["mlx-embeddings>=0.0.1; sys_platform == 'darwin' and platform_machine == 'arm64'"]
memory-gguf = ["llama-cpp-python>=0.2"]
# Multimodal (Apple-Silicon-only runtimes; the agent degrades gracefully without
# them, and `kas doctor` installs the right ones for the detected platform).
vision = ["mlx-vlm>=0.1; sys_platform == 'darwin' and platform_machine == 'arm64'"]  # image->text
voice = ["mlx-whisper>=0.4; sys_platform == 'darwin' and platform_machine == 'arm64'"]  # /listen
tts = ["mlx-audio>=0.2; sys_platform == 'darwin' and platform_machine == 'arm64'"]  # /say (neural)
preview = ["pillow>=10.0"]  # inline image preview (/show); cross-platform
all = ["kas[web,art,memory,vision,voice,tts,preview]"]
# Dev/CI toolchain (linting, types, tests). Pinned so local == CI.
dev = [
    "ruff==0.12.1",
    "mypy==1.16.1",
    "pytest>=8.2",
    "pytest-cov>=5.0",
]

[project.scripts]
kas = "agent.cli:main"
kas-server = "server.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "server", "scripts"]

# Stamp the git commit into the wheel so an installed `kas --version` shows the
# exact build (scripts/version.py reads scripts/_build_info.py when there's no
# checkout). See hatch_build.py.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

# --- Quality gate (see docs/v3/PLAN.md, Phase 0) ---------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
# Root-level scratch/play files (standalone animations, not part of the kas
# package and not imported anywhere) — kept on request but excluded from the
# lint/format gate so they don't fail CI.
extend-exclude = ["starfield.py", "starfield_v2.py"]

[tool.ruff.lint]
# Strict gate: pycodestyle errors/warnings, pyflakes, import-sort, pyupgrade,
# bugbear. Nothing globally ignored — style is enforced, not suggested.
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Tests run as standalone scripts (`python tests/test_x.py`): a sys.path shim
# and section-local imports must precede module-level imports, which E402
# forbids. This is structural to the script-style harness, not a style choice.
"tests/*" = ["E402"]

[tool.mypy]
python_version = "3.11"
# Permissive to start (the tree isn't fully annotated); ratcheted up per phase
# as modules are decomposed. See docs/v3/PLAN.md.
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = false
exclude = ["tests/", "scripts/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# The legacy tests are standalone scripts with bare module-level asserts (still
# runnable as `python tests/test_x.py`). Collect ONLY the runpy shim so pytest
# doesn't import each script directly (which would execute it twice); the shim
# runs each in-process so pytest-cov measures product coverage.
python_files = ["test_scripts.py"]
# Default coverage on every `pytest` run: branch coverage over the product code,
# Cobertura XML (coverage.xml — the format Codecov/Coveralls/CI tools consume),
# a terminal table, and a hard floor so coverage can't silently regress.
addopts = """-q --cov=agent --cov=server --cov-branch \
--cov-report=term-missing --cov-report=xml --cov-report=html --cov-fail-under=45"""

[tool.coverage.run]
source = ["agent", "server"]
branch = true
omit = ["*/__init__.py"]

[tool.coverage.report]
show_missing = true
precision = 1
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",            # Protocol / ABC method stubs
    "pragma: no cover",
]

[tool.coverage.xml]
output = "coverage.xml"
